# Vehicle-State-Estimator

./: .gitignore  App.cpp  CMakeCache.txt  CMakeLists.txt  Common.h  EKF.cpp  EKF.h  Gaussian.cpp  Gaussian.h  Makefile  Model.cpp  Model.h  README.md  Sensor.cpp  Sensor.h  Test.cpp  Test.h  Vehicle-State-Estimator-VS.vcxproj  Vehicle-State-Estimator-VS.vcxproj.filters  Vehicle.h  cmake_install.cmake  gps-2column.txt  gps-3column.txt  gps.txt  heading.txt  headingShorter.txt  omega.txt  vehicle-state-estimator  velocity.txt  x.txt  y.txt
CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
Debug/: vehicle-state-estimator
gnuplot/: gps-2column-parsed.txt  groundTruth.eps  print-4column.gp  print.gp  result.eps  sample-4column.txt  xxx.eps  xxx.txt
vehicle-state-estimator.build/Debug/ALL_BUILD.build/: Script-D870E96FD9324CF7BC23DFC1.sh  dgph  dgph~
vehicle-state-estimator.build/Debug/ZERO_CHECK.build/: Script-6E46CB69FF53484EB4C4C8D3.sh  dgph~
vehicle-state-estimator.build/Debug/vehicle-state-estimator.build/: dgph  dgph~
vehicle-state-estimator.xcodeproj/: project.pbxproj
vehicle-state-estimator.xcodeproj/project.xcworkspace/xcuserdata/januaditya.xcuserdatad/: UserInterfaceState.xcuserstate
vehicle-state-estimator.xcodeproj/xcuserdata/januaditya.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
vehicle-state-estimator.xcodeproj/xcuserdata/januaditya.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  ZERO_CHECK.xcscheme  vehicle-state-estimator.xcscheme  xcschememanagement.plist
(+6 files in other folders)
